--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>the-board-scaffold</title>
+    <title>Dark Matters</title>
+    <meta name="description" content="A collaborative whiteboard for real-time brainstorming, planning, and creativity." />
+
+    <!-- Open Graph (Facebook, Discord, Slack, iMessage, etc.) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Dark Matters" />
+    <meta property="og:description" content="A collaborative whiteboard for real-time brainstorming, planning, and creativity." />
+    <meta property="og:url" content="https://board-lilac-sigma.vercel.app" />
+    <meta property="og:image" content="https://board-lilac-sigma.vercel.app/og-image.png" />
+
+    <!-- Twitter / X -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Dark Matters" />
+    <meta name="twitter:description" content="A collaborative whiteboard for real-time brainstorming, planning, and creativity." />
+    <meta name="twitter:image" content="https://board-lilac-sigma.vercel.app/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
